crud back + front + login user

--- a/buzzpage.html
+++ b/buzzpage.html
@@ -4,137 +4,196 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>bonjour</title>
+  <title>PureBuzz</title>
   <!-- plugins:css -->
-  <link rel="stylesheet" href="vendors/feather/feather.css">
-  <link rel="stylesheet" href="vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="vendors/typicons/typicons.css">
-  <link rel="stylesheet" href="vendors/simple-line-icons/css/simple-line-icons.css">
-  <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-  <link rel="stylesheet" href="js/select.dataTables.min.css">
-  <!-- End plugin css for this page -->
+  <link rel="stylesheet" href="assets/vendors/feather/feather.css">
+  <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="assets/vendors/ti-icons/css/themify-icons.css">
+  <link rel="stylesheet" href="assets/vendors/typicons/typicons.css">
+  <link rel="stylesheet" href="assets/vendors/simple-line-icons/css/simple-line-icons.css">
+  <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
+  <!-- End plugin css -->
   <!-- Custom css for PureBuzz -->
-  <link rel="stylesheet" href="css/vertical-layout-light/style.css">
-  <link rel="stylesheet" href="css/purebuzz-style.css">
-  <!-- endinject -->
-  <link rel="shortcut icon" href="images/" />
-  <!-- Custom Styles for PureBuzz Brand -->
-  <link rel="stylesheet" href="css/purebuzz-custom.css">
+  <link rel="stylesheet" href="assets/css/vertical-layout-light/style.css">
+  <link rel="stylesheet" href="assets/css/purebuzz-style.css">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="assets/css/purebuzz-custom.css">
 </head>
 <body>
-  <div class="container-scroller">
-    <!-- Navbar -->
-    <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
-      <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
-        <div class="me-3">
-          <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
-            <span class="icon-menu"></span>
-          </button>
-        </div>
-        <div>
-          <a class="navbar-brand brand-logo" href="index.html">
-            <img src="PureBuzzLogo.png" alt="PureBuzz logo" />
-          </a>
-          <a class="navbar-brand brand-logo-mini" href="index.html">
-            <img src="images/logo-mini.svg" alt="logo" />
-          </a>
-        </div>
-      </div>
-      <div class="navbar-menu-wrapper d-flex align-items-top">
-        <ul class="navbar-nav">
-          <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
-            <h1 class="welcome-text">Welcome to PureBuzz, <span class="text-black fw-bold">your beekeeping partner</span></h1>
-            <h3 class="welcome-sub-text">Explore our range of honey, bee gear, and more.</h3>
-          </li>
-        </ul>
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <form class="search-form" action="#">
-              <i class="icon-search"></i>
-              <input type="search" class="form-control" placeholder="Search Here" title="Search here">
-            </form>
-          </li>
-        </ul>
-        <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
-          <span class="mdi mdi-menu"></span>
+<div class="container-scroller">
+  <!-- Navbar -->
+  <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
+    <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
+      <div class="me-3">
+        <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
+          <span class="icon-menu"></span>
         </button>
       </div>
-    </nav>
-    <!-- End Navbar -->
+      <div>
+        <a class="navbar-brand brand-logo" href="../../../../index.html">
+          <img src="../../../../assets/PureBuzzLogo.png"style="height: 80px;" alt="logo" />
+        </a>
 
-    <!-- Page content -->
-    <div class="container-fluid page-body-wrapper">
-      <div class="theme-setting-wrapper">
-        <div id="settings-trigger"><i class="ti-settings"></i></div>
-        <div id="theme-settings" class="settings-panel">
-          <i class="settings-close ti-close"></i>
-          <p class="settings-heading">SIDEBAR SKINS</p>
-          <div class="sidebar-bg-options selected" id="sidebar-light-theme">
-            <div class="img-ss rounded-circle bg-light border me-3"></div>Light
+      </div>
+    </div>
+    <div class="navbar-menu-wrapper d-flex align-items-top">
+      <ul class="navbar-nav">
+        <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
+          <h1 class="welcome-text">Welcome to PureBuzz, </h1><span class="text-black fw-bold">your beekeeping partner</span>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <form class="search-form" action="#">
+            <i class="icon-search"></i>
+            <input type="search" class="form-control" placeholder="Search Here" title="Search here">
+          </form>
+        </li>
+      </ul>
+      <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
+        <span class="mdi mdi-menu"></span>
+      </button>
+    </div>
+  </nav>
+  <!-- End Navbar -->
+
+  <!-- Page content -->
+  <div class="container-fluid page-body-wrapper">
+    <!-- Sidebar Navigation -->
+    <nav class="sidebar sidebar-offcanvas" id="sidebar">
+      <ul class="nav">
+        <li class="nav-item">
+          <a id="myProfileLink" class="nav-link" href="#">
+            <i class="mdi mdi-grid-large menu-icon"></i>
+            <span class="menu-title">My Profile</span>
+          </a>
+        </li>
+
+
+        <li class="nav-item nav-category">Others</li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables">
+            <i class="menu-icon mdi mdi-table"></i>
+            <span class="menu-title">Tables</span>
+            <i class="menu-arrow"></i>
+          </a>
+          <div class="collapse" id="tables">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" href="pages/tables/basic-table.html">Basic Table</a></li>
+            </ul>
           </div>
-          <div class="sidebar-bg-options" id="sidebar-dark-theme">
-            <div class="img-ss rounded-circle bg-dark border me-3"></div>Dark
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons">
+            <i class="menu-icon mdi mdi-layers-outline"></i>
+            <span class="menu-title">Icons</span>
+            <i class="menu-arrow"></i>
+          </a>
+          <div class="collapse" id="icons">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" href="pages/icons/mdi.html">Mdi Icons</a></li>
+            </ul>
           </div>
-          <p class="settings-heading mt-2">HEADER SKINS</p>
-          <div class="color-tiles mx-0 px-4">
-            <div class="tiles success"></div>
-            <div class="tiles warning"></div>
-            <div class="tiles danger"></div>
-            <div class="tiles info"></div>
-            <div class="tiles dark"></div>
-            <div class="tiles default"></div>
+        </li>
+        <li class="nav-item nav-category">Pages</li>
+        <li class="nav-item">
+          <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+            <i class="menu-icon mdi mdi-account-circle-outline"></i>
+            <span class="menu-title">User Pages</span>
+            <i class="menu-arrow"></i>
+          </a>
+          <div class="collapse" id="auth">
+            <ul class="nav flex-column sub-menu">
+              <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html">Login</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="nav-item nav-category">Help</li>
+        <li class="nav-item">
+          <a class="nav-link" href="http://bootstrapdash.com/demo/star-admin2-free/docs/documentation.html">
+            <i class="menu-icon mdi mdi-file-document"></i>
+            <span class="menu-title">Documentation</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- End Sidebar Navigation -->
+
+    <!-- Main Content -->
+    <div class="container p-5">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="assets/vendors/honey-jar.jpg" alt="Honey Jar">
+            <div class="card-body">
+              <h5 class="card-title">Pure Honey</h5>
+              <p class="card-text">Discover our range of organic honey, sourced from the finest farms.</p>
+              <a href="#" class="btn btn-primary">Shop Now</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container p-5">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card">
-              <img class="card-img-top" src="images/honey-jar.jpg" alt="Honey Jar">
-              <div class="card-body">
-                <h5 class="card-title">Pure Honey</h5>
-                <p class="card-text">Discover our range of organic honey, sourced from the finest farms.</p>
-                <a href="#" class="btn btn-primary">Shop Now</a>
-              </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="assets/vendors/bee-gear.jpg" alt="Bee Gear">
+            <div class="card-body">
+              <h5 class="card-title">Bee Farming Gear</h5>
+              <p class="card-text">All the tools and protective gear needed for successful beekeeping.</p>
+              <a href="#" class="btn btn-primary">Explore Gear</a>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="card">
-              <img class="card-img-top" src="images/bee-gear.jpg" alt="Bee Gear">
-              <div class="card-body">
-                <h5 class="card-title">Bee Farming Gear</h5>
-                <p class="card-text">All the tools and protective gear needed for successful beekeeping.</p>
-                <a href="#" class="btn btn-primary">Explore Gear</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="card">
-              <img class="card-img-top" src="images/medical-honey.jpg" alt="Medical Honey">
-              <div class="card-body">
-                <h5 class="card-title">Medical Honey Products</h5>
-                <p class="card-text">Harness the natural healing properties of honey for your health.</p>
-                <a href="#" class="btn btn-primary">Learn More</a>
-              </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <img class="card-img-top" src="assets/vendors/medical-honey.jpg" alt="Medical Honey">
+            <div class="card-body">
+              <h5 class="card-title">Medical Honey Products</h5>
+              <p class="card-text">Harness the natural healing properties of honey for your health.</p>
+              <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-- End Page content -->
-
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="d-sm-flex justify-content-center justify-content-sm-between">
-        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">PureBuzz &copy; 2024</span>
-        <span class="text-muted d-block text-center text-sm-right d-sm-inline-block">Honey, Beekeeping & Bee Essentials</span>
-      </div>
-    </footer>
-    <!-- End Footer -->
+    <!-- End Main Content -->
   </div>
+  <!-- End Page Content -->
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="d-sm-flex justify-content-center justify-content-sm-between">
+      <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">PureBuzz &copy; 2024</span>
+      <span class="text-muted d-block text-center text-sm-right d-sm-inline-block">Honey, Beekeeping & Bee Essentials</span>
+    </div>
+  </footer>
+  <!-- End Footer -->
+</div>
 </body>
 </html>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const userId = 1; // Replace with the actual user ID from your session or database
+    const profileLink = document.getElementById("myProfileLink");
+
+    // Update the href attribute to include the user ID
+    profileLink.href = `App/view/Front_Office/User/UserProfile.html?id=${userId}`;
+  });
+
+</script>
+<script src="../../../../assets/vendors/js/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- Plugin js for this page -->
+<script src="../../../../assets/vendors/chart.js/Chart.min.js"></script>
+<script src="../../../../assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
+<script src="../../../../assets/vendors/progressbar.js/progressbar.min.js"></script>
+
+<!-- End plugin js for this page -->
+<!-- inject:js -->
+<script src="../../../../assets/js/off-canvas.js"></script>
+<script src="../../../../assets/js/hoverable-collapse.js"></script>
+<script src="../../../../assets/js/template.js"></script>
+<script src="../../../../assets/js/settings.js"></script>
+<script src="../../../../assets/js/todolist.js"></script>
+<!-- endinject -->
+<!-- Custom js for this page-->
+<script src="../../../../assets/js/dashboard.js"></script>
+<script src="../../../../assets/js/Chart.roundedBarCharts.js"></script>
